--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,18 +1,18 @@
 <h1>Tweets</h1>
 
 <%= search_form_for @q do |f| %>
-  <%= f.label :description_cont, "Search tweets" %>
-  <%= f.search_field :description_cont, placeholder: "Search tweets" %>
-  <%= f.submit "Search", class: 'btn btn-primary' %>
+  <%= f.label :description_cont, "Buscar tweets" %>
+  <%= f.search_field :description_cont, placeholder: "Buscar tweets" %>
+  <%= f.submit "Buscar", class: 'btn btn-primary' %>
 <% end %>
 
-<%= link_to 'New Tweet', new_tweet_path, class: 'btn btn-primary' %>
+<%= link_to 'Nuevo Tweet', new_tweet_path, class: 'btn btn-primary' %>
 
 <table>
   <thead>
     <tr>
-      <th>Description</th>
-      <th>User Name</th>
+      <th>Descripción</th>
+      <th>Nombre de Usuario</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,12 +22,14 @@
       <tr>
         <td><%= tweet.description %></td>
         <td><%= tweet.user_name %></td>
-        <td><%= link_to 'Show', tweet %></td>
-        <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
-        <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Mostrar', tweet %></td>
+        <td><%= link_to 'Editar', edit_tweet_path(tweet) %></td>
+        <td><%= link_to 'Eliminar', tweet, method: :delete, data: { confirm: '¿Estás seguro?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= pagy_nav(@pagy) %>
+<div class="my-5 d-flex justify-content-end">
+  <%= pagy_nav(@pagy) %>
+</div>
