--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,15 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="<%= root_path%>">
+        <img src="<%= asset_path('X.png') %>" alt="X" style="height: 35px; width: auto">
+      </a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+        </ul>
+      </div>
+    </nav>
     <div class="container">
       <%= yield %>
     </div>
