--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,33 +1,36 @@
-<h1>Tweets</h1>
+<div class="container mt-4">
+  <h1 class="mb-4">Tweets</h1>
 
-<%= search_form_for @q do |f| %>
-  <%= f.label :description_cont, "Buscar tweets" %>
-  <%= f.search_field :description_cont, placeholder: "Buscar tweets" %>
-  <%= f.submit "Buscar", class: 'btn btn-primary' %>
-<% end %>
+  <%= search_form_for @q, class: "d-flex mb-4" do |f| %>
+    <%= f.label :description_cont, "Buscar tweets", class: "visually-hidden" %>
+    <%= f.search_field :description_cont, placeholder: "Buscar tweets", class: "form-control me-2" %>
+    <%= f.submit "Buscar", class: 'btn btn-dark' %>
+  <% end %>
 
-<%= link_to 'Nuevo Tweet', new_tweet_path, class: 'btn btn-primary' %>
+  <div class="text-end mb-3">
+    <%= link_to 'Nuevo Tweet', new_tweet_path, class: 'btn btn-dark' %>
+  </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Descripción</th>
-      <th>Nombre de Usuario</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+  <div class="row">
     <% @tweets.each do |tweet| %>
-      <tr>
-        <td><%= tweet.description %></td>
-        <td><%= tweet.user_name %></td>
-        <td><%= link_to 'Mostrar', tweet %></td>
-        <td><%= link_to 'Editar', edit_tweet_path(tweet) %></td>
-        <td><%= link_to 'Eliminar', tweet, method: :delete, data: { confirm: '¿Estás seguro?' } %></td>
-      </tr>
+      <div class="col-md-6 col-lg-4 mb-4">
+        <div class="card">
+          <div class="card-body">
+            <div class="d-flex w-100 justify-content-between">
+              <h5 class="card-title mb-1"><%= tweet.user_name %></h5>
+              <small><%= link_to 'Eliminar', tweet, method: :delete, data: { confirm: '¿Estás seguro?' }, class: 'btn btn-danger btn-sm' %></small>
+            </div>
+            <p class="card-text"><%= tweet.description %></p>
+            <div>
+              <%= link_to 'Mostrar', tweet, class: 'btn btn-dark' %>
+              <%= link_to 'Editar', edit_tweet_path(tweet), class: 'btn btn-dark' %>
+            </div>
+          </div>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
 
-<%= paginate @tweets %>
+  <%= paginate @tweets %>
+</div>
+
