--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_with(model: tweet) do |form| %>
+<%= form_with(model: tweet, local: true, class: 'mb-4') do |form| %>
   <% if tweet.errors.any? %>
-    <div style="color: red">
+    <div class="alert alert-danger">
       <h2><%= pluralize(tweet.errors.count, "error") %> prohibited this tweet from being saved:</h2>
 
       <ul>
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description %>
+  <div class="mb-3">
+    <%= form.label :description, class: 'form-label' %>
+    <%= form.text_area :description, class: 'form-control', rows: 3 %>
+  </div>
+
+  <div class="mb-3">
+    <%= form.label :user_name, class: 'form-label' %>
+    <%= form.text_field :user_name, class: 'form-control' %>
   </div>
 
   <div>
-    <%= form.label :user_name, style: "display: block" %>
-    <%= form.text_field :user_name %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+    <%= form.submit 'Guardar', class: 'btn btn-dark' %>
   </div>
 <% end %>
