--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,12 +1,15 @@
-<% content_for :title, "Editing tweet" %>
+<% content_for :title, "Editar Tweet" %>
 
-<h1>Editing tweet</h1>
+<div class="container mt-4">
+  <h1 class="mb-4">Editar Tweet</h1>
 
-<%= render "form", tweet: @tweet %>
+  <%= render "form", tweet: @tweet %>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Show this tweet", @tweet %> |
-  <%= link_to "Back to tweets", tweets_path %>
+  <div>
+    <%= link_to "Mostrar este tweet", @tweet, class: 'btn btn-dark' %> |
+    <%= link_to "Volver a los tweets", tweets_path, class: 'btn btn-secondary' %>
+  </div>
 </div>
+
