--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,11 +1,14 @@
-<% content_for :title, "New tweet" %>
+<% content_for :title, "Nuevo Tweet" %>
 
-<h1>New tweet</h1>
+<div class="container mt-4">
+  <h1 class="mb-4">Nuevo Tweet</h1>
 
-<%= render "form", tweet: @tweet %>
+  <%= render "form", tweet: @tweet %>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Back to tweets", tweets_path %>
+  <div>
+    <%= link_to "Volver a los tweets", tweets_path, class: 'btn btn-secondary' %>
+  </div>
 </div>
+
