--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,10 +1,12 @@
-<p style="color: green"><%= notice %></p>
+<div class="container mt-4">
+  <p class="text-success"><%= notice %></p>
 
-<%= render @tweet %>
+  <%= render @tweet %>
 
-<div>
-  <%= link_to "Edit this tweet", edit_tweet_path(@tweet) %> |
-  <%= link_to "Back to tweets", tweets_path %>
-
-  <%= button_to "Destroy this tweet", @tweet, method: :delete %>
+  <div class="mt-3 d-flex flex-wrap">
+    <%= link_to "Editar este tweet", edit_tweet_path(@tweet), class: 'btn btn-dark me-2 mb-2' %>
+    <%= link_to "Volver a los tweets", tweets_path, class: 'btn btn-secondary me-2 mb-2' %>
+    <%= button_to "Eliminar este tweet", @tweet, method: :delete, class: 'btn btn-danger mb-2' %>
+  </div>
 </div>
+
